fixed layout bugs

--- a/src/components/product/product.scss
+++ b/src/components/product/product.scss
@@ -1,7 +1,7 @@
 .product {
     width: min-content;
     max-height: 390px;
-    width: 270px;
+    width: 290px;
     flex-shrink: 0;
 
     &__img {
@@ -97,6 +97,7 @@
 
 @media screen and (max-width: 1727px) {
     .product {
+        width: 270px;
 
         &__price {
             &-old {
@@ -113,18 +114,6 @@
             font-size: 12px;
             width: 115px;
         }
-    }
-}
-
-@media screen and (max-width: 1280px) {
-    .product {
-        width: 290px;
-    }
-}
-
-@media screen and (max-width: 765px) {
-    .product {
-        width: 270px;
     }
 }
 
