--- a/src/components/profileEditor/profileEditor.scss
+++ b/src/components/profileEditor/profileEditor.scss
@@ -63,7 +63,7 @@
         gap: 20px;
 
         &-img {
-            width: 96px;
+            min-width: 96px;
             height: 96px;
             border-radius: 100%;
         }
