--- a/src/pages/rootPage/rootPage.scss
+++ b/src/pages/rootPage/rootPage.scss
@@ -299,8 +299,8 @@
         }
 
         &-img {
-            max-width: 34px;
-            max-height: 34px;
+            width: 34px;
+            height: 34px;
             border-radius: 100px;
         }
     }
